<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingHorizontal="50dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"></ImageView>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toStay"
            android:text="@string/toStay"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toStore"
            android:text="@string/toStore"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp">
        <Button
            android:textSize="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myAccount"
            android:text="@string/myAcc"
            android:layout_weight="1"></Button>
        <Button
            android:textSize="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myStore"
            android:text="@string/myStore"
            android:layout_weight="1"></Button>
        <Button
            android:textSize="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout"
            android:text="@string/logout"
            android:layout_weight="1"></Button>
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>